--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 Django==5.2.8
 gunicorn==23.0.0
+idna==3.11
 packaging==25.0
+requests==2.32.5
+resend==2.19.0
 sqlparse==0.5.3
+typing_extensions==4.15.0
+urllib3==2.5.0
 whitenoise==6.11.0
